Added some sound files

--- a/show_info/canceled_episodes.html
+++ b/show_info/canceled_episodes.html
@@ -99,7 +99,7 @@
                             <p>
                                 Zim uses the power of Simon Says to get orphans to take over the world for him. It's up to Dib to stop them. And keep the baby changing machine from having a core meltdown.
                             </p>
-                            <a href="../show_info/canceled_episodes/simon_says_doom.html">Episode Transcript</a> | <a href="#">Download Audio File</a>
+                            <a href="../show_info/canceled_episodes/simon_says_doom.html">Episode Transcript</a> | <a href="../audio/simon_says_doom.mp3">Download Audio File</a>
                         </div>
                         <div class="item">
                             <h3>Invader Poonchy <small>#28a</small></h3>
@@ -109,11 +109,98 @@
                             <a href="../show_info/canceled_episodes/invader_poonchy.html">Episode Transcript</a> | <a href="#">Download Audio File</a>
                         </div>
                         <div class="item">
+                            <h3>Numbs of Doom <small>#28b</small></h3>
+                            <p>
+                                Zim creates a new henchman to replace Gir. And his name shall be....MINIMOOSE!
+                            </p>
+                            <a href="../show_info/canceled_episodes/nubs_of_doom.html">Episode Transcript</a> | <a href="#">Download Audio File</a>
+                        </div>
+                        <div class="item">
+                            <h3>Top of the Line <small>#29a</small></h3>
+                            <p>
+                                Although a script exists for this episode, it has not been made available to the public as of now. <br>
+                                <br>
+                                This episode involves a SIR contest. In the end, all of the SIRs get destroyed except for GIR and the SIRs belonging to Invader Tenn and Invader Skoodge. Tak was to return as the villain of this episode, likely sabotaging the events.
+                            </p>
+                            <p style="color: grey; font-size: 1em; display: inline;">No Transcript</p> | <p style="color: grey;  font-size: 1em; display: inline;">No Audio File</p>
+                        </div>
+                        <div class="item">
                             <h3>The Return of Keef <small>#31a</small></h3>
                             <p>
                                 Keef returns and tries to get Zim and Dib to be bestest friends. Zim and Dib have to work together to get rid of him for good.
                             </p>
-                            <a href="../show_info/canceled_episodes/the_return_of_keef.html">Episode Transcript</a> | <a href="#">Download Audio File</a>
+                            <a href="../show_info/canceled_episodes/the_return_of_keef.html">Episode Transcript</a> | <a href="../audio/return_of_keef.mp3">Download Audio File</a>
+                        </div>
+                        <div class="item">
+                            <h3>Gir's Big Day <small>#31b</small></h3>
+                            <p>
+                                No complete scripts exists for this cancelled episode. This is how the plot would've gone: <br>
+                                <br>
+                                While fetching supplies for ZIM, GIR gets hit by a truck. Some scientists witness this event and are amazed at how GIR is fine after the accident. They abduct him for their "ultimate doggy" experiment. They decide to combine GIR's strength with the obedience of another dog. While getting a sample of GIR, they only retrieve a bit of doughnut crumbs. They unknowingly create a horrible doughnut-dog monster. A scientist then helps GIR escape.
+                            </p>
+                            <p style="color: grey; font-size: 1em; display: inline;">No Transcript</p> | <p style="color: grey;  font-size: 1em; display: inline;">No Audio File</p>
+                        </div>
+                        <div class="item">
+                            <h3>Mopiness of Doom <small>#32a</small></h3>
+                            <p>
+                                Dib finally gives up on being a paranormal investigator to pursue studying "real science" with his father. Meanwhile Zim, with no nemesis, goes into a deep funk.
+                            </p>
+                            <a href="../show_info/canceled_episodes/mopiness_of_doom.html">Episode Transcript</a> | <a href="../audio/mopiness_of_doom.mp3">Download Audio File</a>
+                        </div>
+                        <div class="item">
+                            <h3>Those! <small>#32b</small></h3>
+                            <p>
+                                No complete scripts exists for this cancelled episode. Very little is known about it, other than that it involves ZIM commanding an army of slightly-larger-than-normal ants, parodying an old movie called "Them!" which featured gigantic nuclear ants.
+                            </p>
+                            <p style="color: grey; font-size: 1em; display: inline;">No Transcript</p> | <p style="color: grey;  font-size: 1em; display: inline;">No Audio File</p>
+                        </div>
+                        <div class="item">
+                            <h3>Ten Minutes to Doom <small>#130a</small></h3>
+                            <p>
+                                Zim loses his PAK and has 10 minutes to get it back before he dies. And guess who's got it. You guessed it.
+                            </p>
+                            <a href="../show_info/canceled_episodes/ten_minutes_to_doom.html">Episode Transcript</a> | <a href="../audio/ten_minutes_to_doom.mp3">Download Audio File</a>
+                        </div>
+                        <div class="item">
+                            <h3>Day of Da Spookies <small>#131b</small></h3>
+                            <p>
+
+                            </p>
+                            <a href="../show_info/canceled_episodes/day_of_da_spookies.html">Episode Transcript</a> | <a href="../audio/ten_minutes_to_doom.mp3">Download Audio File</a>
+                        </div>
+                        <div class="item">
+                            <h3>It Feeds on Noodles <small>No #</small></h3>
+                            <p>
+                                No complete scripts exists for this cancelled episode. Very little is known about it, other than that it involves ZIM becoming a Vampire who must feed on Chinese food. And he would've had chopsticks for fangs.
+                            </p>
+                            <p style="color: grey; font-size: 1em; display: inline;">No Transcript</p> | <p style="color: grey;  font-size: 1em; display: inline;">No Audio File</p>
+                        </div>
+                        <div class="item">
+                            <h3>"Pants!" a.k.a. "When pants Ruled!" <small>No #</small></h3>
+                            <p>
+                                No complete scripts exists for this cancelled episode. It apparently may not have been made anyways even if ZIM wasn't cancelled, due to a Jimmy Neutron special involving invading pants as well. Here is the final premise for the episode detailing how it would have happened: (click the transcript button)
+                            </p>
+                            <a href="../show_info/canceled_episodes/pants.html">Episode Transcript</a> | <a href="../audio/mopiness_of_doom.mp3">Download Audio File</a>
+                        </div>
+                        <div class="item">
+                            <h3>2 Part Season 2 Finale <small>No #</small></h3>
+                            <p>
+                                The finale for season 2 would've been a two-parter, the longest ZIM episode yet. Although the plot had not been decided on yet by the ZIM crew, the idea that Jhonen Vasquez had been toying with involved a rescue mission on planet Meekrob: <br>
+
+                                <br>Invader Tenn would've been captured by the Meekrob aliens, so all the other Invaders are called in to perform her rescue. ZIM learns of the mission from Skoodge, since Skoodge lives in ZIM's basement in late season 2. Dib also goes to Meekrob, presumably in Tak's ship. While there, a conflict breaks out when it is revealed that the Resisty is in league with the Meekrob.
+                                <br>
+                                <br>Apparently, Zim would've been launched into a meteor and Dib would've been hailed as the ambassador to Meekrob at the end.
+                            </p>
+                            <p style="color: grey; font-size: 1em; display: inline;">No Transcript</p> | <p style="color: grey;  font-size: 1em; display: inline;">No Audio File</p>
+                        </div>
+                        <div class="item">
+                            <h3>Invader Dib <small>No #</small></h3>
+                            <p>
+                                An idea thrown around the ZIM crew offices that most likely would never have been made even if ZIM wasn't cancelled, Invader Dib was the title of a proposed TV movie set several seasons into the series. It would've involved Dib going to Irk and taking action against the Irken race, and it probably would've served as a finale conclusion to the series. <br>
+                                <br>
+                                Apparently Jhonen Vasquez wanted the later seasons to diverge from the original format of the series and instead depict a galactic chase as Dib pursues ZIM across many alien planets on his way to Irk, finally ending in the TV movie Invader Dib.
+                            </p>
+                            <p style="color: grey; font-size: 1em; display: inline;">No Transcript</p> | <p style="color: grey;  font-size: 1em; display: inline;">No Audio File</p>
                         </div>
                     </div>
                 </div><!--End Content-->
