Canceled Episodes page finished

--- a/show_info/canceled_episodes.html
+++ b/show_info/canceled_episodes.html
@@ -82,7 +82,7 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 content">
                     <div class="section">
-                        <h2>Canceled Episodes <small>Coming Soon!</small></h2>
+                        <h2>Canceled Episodes</h2>
                         <hr>
                         <p>
                             Of the 40 contracted episodes only 27 episodes were actually completed. Here is a list of the remaining episodes we never got to see. Some of them already had the voice recording done which were released on the extra DVD in the Zim House DVD box set. I will try to have those available for download on this page. If I cannot, I will direct you to where you CAN download them.
@@ -155,6 +155,13 @@
                             <p style="color: grey; font-size: 1em; display: inline;">No Transcript</p> | <p style="color: grey;  font-size: 1em; display: inline;">No Audio File</p>
                         </div>
                         <div class="item">
+                            <h3>The Trial <small>#27a/b</small></h3>
+                            <p>
+                                Zim makes Dib look like a fraud on Mysterious Mysteries by using paranormal stuff against him.
+                            </p>
+                            <a href="../show_info/canceled_episodes/the_trial.html">Episode Transcript</a> | <p style="color: grey;  font-size: 1em; display: inline;">No Audio File</p>
+                        </div>
+                        <div class="item">
                             <h3>Ten Minutes to Doom <small>#130a</small></h3>
                             <p>
                                 Zim loses his PAK and has 10 minutes to get it back before he dies. And guess who's got it. You guessed it.
@@ -164,9 +171,9 @@
                         <div class="item">
                             <h3>Day of Da Spookies <small>#131b</small></h3>
                             <p>
-
+                                Zim makes Dib look like a fraud on Mysterious Mysteries by using paranormal stuff against him.
                             </p>
-                            <a href="../show_info/canceled_episodes/day_of_da_spookies.html">Episode Transcript</a> | <a href="../audio/ten_minutes_to_doom.mp3">Download Audio File</a>
+                            <a href="../show_info/canceled_episodes/day_of_da_spookies.html">Episode Transcript</a> | <p style="color: grey;  font-size: 1em; display: inline;">No Audio File</p>
                         </div>
                         <div class="item">
                             <h3>It Feeds on Noodles <small>No #</small></h3>
@@ -180,7 +187,7 @@
                             <p>
                                 No complete scripts exists for this cancelled episode. It apparently may not have been made anyways even if ZIM wasn't cancelled, due to a Jimmy Neutron special involving invading pants as well. Here is the final premise for the episode detailing how it would have happened: (click the transcript button)
                             </p>
-                            <a href="../show_info/canceled_episodes/pants.html">Episode Transcript</a> | <a href="../audio/mopiness_of_doom.mp3">Download Audio File</a>
+                            <a href="../show_info/canceled_episodes/pants.html">Episode Transcript</a> | <p style="color: grey;  font-size: 1em; display: inline;">No Audio File</p>
                         </div>
                         <div class="item">
                             <h3>2 Part Season 2 Finale <small>No #</small></h3>
