--- a/show_info/canceled_episodes.html
+++ b/show_info/canceled_episodes.html
@@ -178,16 +178,25 @@
                         <div class="item">
                             <h3>It Feeds on Noodles <small>No #</small></h3>
                             <p>
-                                No complete scripts exists for this cancelled episode. Very little is known about it, other than that it involves ZIM becoming a Vampire who must feed on Chinese food. And he would've had chopsticks for fangs.
+                                No complete scripts exists for this cancelled episode. Very little is known about it, other than that it involves ZIM becoming a Vampire who must feed on Chinese food. And he would've had chopsticks and fangs.
                             </p>
                             <p style="color: grey; font-size: 1em; display: inline;">No Transcript</p> | <p style="color: grey;  font-size: 1em; display: inline;">No Audio File</p>
                         </div>
                         <div class="item">
                             <h3>"Pants!" a.k.a. "When pants Ruled!" <small>No #</small></h3>
                             <p>
-                                No complete scripts exists for this cancelled episode. It apparently may not have been made anyways even if ZIM wasn't cancelled, due to a Jimmy Neutron special involving invading pants as well. Here is the final premise for the episode detailing how it would have happened: (click the transcript button)
+                                No complete scripts exists for this cancelled episode. It apparently may not have been made anyways even if ZIM wasn't cancelled, due to a Jimmy Neutron special involving invading pants as well. Here is the final premise for the episode detailing how it would have happened: <br>
+                                <br>
+                                (click the transcript button)
                             </p>
                             <a href="../show_info/canceled_episodes/pants.html">Episode Transcript</a> | <p style="color: grey;  font-size: 1em; display: inline;">No Audio File</p>
+                        </div>
+                        <div class="item">
+                            <h3>Squishy: Hugger of Worlds <small>No #</small></h3>
+                            <p>
+                                Premise to be written.
+                            </p>
+                            <p style="color: grey; font-size: 1em; display: inline;">No Transcript</p> | <p style="color: grey;  font-size: 1em; display: inline;">No Audio File</p>
                         </div>
                         <div class="item">
                             <h3>2 Part Season 2 Finale <small>No #</small></h3>
