New audio files added

--- a/show_info/canceled_episodes.html
+++ b/show_info/canceled_episodes.html
@@ -92,7 +92,7 @@
                             <p>
                                 A power surge causes Zim's roboparents to disown him, throw him out of the house and adopt a half monkey, half badger hybrid that trashes his base. With the help of a filthy, weenie loving hobo, Zim has a plan to get his base back.
                             </p>
-                            <a href="../show_info/canceled_episodes/roboparents_gone_wild.html">Episode Transcript</a> | <a href="#">Download Audio File</a>
+                            <a href="../show_info/canceled_episodes/roboparents_gone_wild.html">Episode Transcript</a> | <a href="../audio/roboparents_gone_wild.mp3">Download Audio File</a>
                         </div>
                         <div class="item">
                             <h3>Simon Says Doom <small>#27b</small></h3>
@@ -106,14 +106,14 @@
                             <p>
                                 Zim tries to convince Dib that their classmate, Poonchy is an Irken invader to distract Dib from his latest evil plan.
                             </p>
-                            <a href="../show_info/canceled_episodes/invader_poonchy.html">Episode Transcript</a> | <a href="#">Download Audio File</a>
+                            <a href="../show_info/canceled_episodes/invader_poonchy.html">Episode Transcript</a> | <a href="../audio/invader_poonchy.mp3">Download Audio File</a>
                         </div>
                         <div class="item">
-                            <h3>Numbs of Doom <small>#28b</small></h3>
+                            <h3>Nubs of Doom <small>#28b</small></h3>
                             <p>
                                 Zim creates a new henchman to replace Gir. And his name shall be....MINIMOOSE!
                             </p>
-                            <a href="../show_info/canceled_episodes/nubs_of_doom.html">Episode Transcript</a> | <a href="#">Download Audio File</a>
+                            <a href="../show_info/canceled_episodes/nubs_of_doom.html">Episode Transcript</a> | <a href="../audio/nubs_of_doom.mp3">Download Audio File</a>
                         </div>
                         <div class="item">
                             <h3>Top of the Line <small>#29a</small></h3>
