--- a/show_info/history.html
+++ b/show_info/history.html
@@ -121,7 +121,7 @@
                                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                                 </form>
-                                <img id="minimoose" width="270" src="images/donations.png">
+                                <img id="minimoose" width="270" src="../images/donations.png">
                             </section>
                         </div>
                     </aside>
