Added more to other Fan sites page

--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
                         <h2>Updates</h2>
                         <hr>
                         <p>
+                            <strong>December 31, 2015 - </strong>Canceled Episodes page complete! Go there and check out transcripts for unfinished episodes! Some episodes even have downloadable audio tracks of the voice acting of those episodes.
+                        </p>
+                        <p>
+                            Also check out the Other Fan Pages link! Some cool stuff there! Wooo!
+                        </p>
+                        <p>
                             <strong>December 30, 2015 - </strong>The search for people to help with the site is going well. Adding content is going to take some time so what I'm going to do first is add pages for the other sites. Look on Zim Resources soon for good stuff!
                         </p>
                         <p>
