--- a/resources/other_fan_sites.html
+++ b/resources/other_fan_sites.html
@@ -101,6 +101,13 @@
                                         Another great resource for Zim info, episode trivia and easter eggs. Also a great collection of stock IZ images and links.
                                     </p>
                                 </div></a>
+                            <a target="_blank" style="text-decoration: none; color: white;" href="http://www.badbadrubberpiggy.com/">
+                            <div class="item">
+                                <h3>Bad Bad Rubber Piggy <small>The Blog</small></h3>
+                                <p>
+                                    Another site that I thought had been blown off the map. It had the biggest screenshot gallery known to Irken kind. It's a blog now but it still exists in some form. I'm sad.
+                                </p>
+                            </div></a>
                             <a target="_blank" style="text-decoration: none; color: white;" href="http://www.roomwithamoose.com/">
                             <div class="item">
                                 <h3>Room with a Moose <small>&amp Gir</small></h3>
@@ -108,6 +115,13 @@
                                     The best site for awesome Zim downloadables, merch and dead links!
                                 </p>
                             </div></a>
+                            <a target="_blank" style="text-decoration: none; color: white;" href="http://zimages.irkenarchive.com/">
+                                <div class="item">
+                                    <h3>Zimages</h3>
+                                    <p>
+                                        A neato fan blog with posts and gifs and everything else you'd expect from a fan blog.
+                                    </p>
+                                </div></a>
                             </div>
                         </div><!--End Content-->
                         <!--Side Bar-->
