--- a/other_links/resisty_database.html
+++ b/other_links/resisty_database.html
@@ -7,12 +7,12 @@
     <link rel="icon" href="images/favicon.ico">
     <title>The Scary Monkey Show Invader Zim Information Site</title>
     <!--Stylesheets-->
-    <link rel="stylesheet" href="css/bootstrap.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="../css/bootstrap.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="../css/resisty.css" media="screen" title="no title" charset="utf-8">
     <!--Javascript-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src='js/script.js'></script>
-    <script type="text/javascript" src='js/bootstrap.js'></script>
+    <script type="text/javascript" src='../js/script.js'></script>
+    <script type="text/javascript" src='../js/bootstrap.js'></script>
     <!--Fonts-->
     <link href='http://fonts.googleapis.com/css?family=Voltaire' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="container wrapper">
-        <img class="site_banner" src="images/index/site_banner.png">
+        <img class="site_banner" src="../images/resisty_database/resisty_banner.png">
         <nav class='navbar navbar-inverse'>
             <div class='container'>
                 <div class='navbar-header'>
@@ -33,47 +33,47 @@
                 </div><!--End Navbar Header-->
                 <div class=' collapse navbar-collapse' id='navbar-collapse'>
                     <ul class='nav navbar-nav'>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="show_info.html">Show Info</a>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../show_info.html">Show Info</a>
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
-                                        <li><a href="show_info/history.html">History</a></li>
-                                        <li><a href="show_info/episode_guide.html">Episode Guide</a></li>
-                                        <li><a href="show_info/cast_and_crew.html">Cast and Crew</a></li>
-                                        <li><a href="show_info/canceled_episodes.html">Canceled Episodes</a></li>
-                                        <li><a href="show_info/easter_eggs.html">Easter Eggs/Cameos</a></li>
+                                        <li><a href="../show_info/history.html">History</a></li>
+                                        <li><a href="../show_info/episode_guide.html">Episode Guide</a></li>
+                                        <li><a href="../show_info/cast_and_crew.html">Cast and Crew</a></li>
+                                        <li><a href="../show_info/canceled_episodes.html">Canceled Episodes</a></li>
+                                        <li><a href="../show_info/easter_eggs.html">Easter Eggs/Cameos</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </li>
-                        <li><a href="lore.html">Lore</a>
+                        <li><a href="../lore.html">Lore</a>
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
-                                        <li><a href="lore/creature_biology.html">Creature Biology</a></li>
-                                        <li><a href="lore/earth_locations.html">Earth Locations</a></li>
-                                        <li><a href="lore/character_bios.html">Character Bios</a></li>
-                                        <li><a href="lore/planet_guide.html">Planet Guide</a></li>
-                                        <li><a href="lore/irken_guide.html">Irken Guide</a></li>
+                                        <li><a href="../lore/creature_biology.html">Creature Biology</a></li>
+                                        <li><a href="../lore/earth_locations.html">Earth Locations</a></li>
+                                        <li><a href="../lore/character_bios.html">Character Bios</a></li>
+                                        <li><a href="../lore/planet_guide.html">Planet Guide</a></li>
+                                        <li><a href="../lore/irken_guide.html">Irken Guide</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </li>
-                        <li><a href="resources.html">Zim Resources</a>
+                        <li><a href="../resources.html">Zim Resources</a>
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
-                                        <li><a href="resources/other_fan_sites.html">Other Fan Sites</a></li>
-                                        <li><a href="resources/forums.html">Forums</a></li>
-                                        <li><a href="resources/social_media.html">Social Media</a></li>
-                                        <li><a href="resources/other_resources.html">Other</a></li>
+                                        <li><a href="../resources/other_fan_sites.html">Other Fan Sites</a></li>
+                                        <li><a href="../resources/forums.html">Forums</a></li>
+                                        <li><a href="../resources/social_media.html">Social Media</a></li>
+                                        <li><a href="../resources/other_resources.html">Other</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </li>
-                        <li><a href="faq.html">FAQ</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="../faq.html">FAQ</a></li>
+                        <li><a href="../contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div><!--End Container-->
@@ -82,41 +82,23 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 content">
                     <div class="section">
-                        <h2>Updates</h2>
+                        <h2>Show Info</h2>
                         <hr>
-                        <p>
-                            <strong>December 31, 2015 - </strong>Canceled Episodes page complete! Go there and check out transcripts for unfinished episodes! Some episodes even have downloadable audio tracks of the voice acting of those episodes.
-                        </p>
-                        <p>
-                            Also check out the Other Fan Pages link! Some cool stuff there! Wooo!
-                        </p>
-                        <p>
-                            <strong>December 30, 2015 - </strong>The search for people to help with the site is going well. Adding content is going to take some time so what I'm going to do first is add pages for the other sites. Look on Zim Resources soon for good stuff!
-                        </p>
-                        <p>
-                            <strong>December 28, 2015 - </strong>The site has been revamped. It may look prettymuch the same but I can assure you the structure is way different. I've revamped it in a much more managable coding format. So I should have it back up to where it was in no time. Then maybe I can get around to finishing it. Also my buddy, Nicolas is going to be helping out in any way he can.
-                        </p>
-                        <p>
-                            I am going to make the contact page first so that I or Nicolas can be contacted about content to add. I have all the original files from The Scary Monkey Show from 2007 but if you think you have something new to add, please let me know! In fact, here's my email: <a href="mailto:mattboy115@yahoo.com">mattboy115@yahoo.com</a>!
-                        </p>
-                    </div>
-                    <div class="section">
-                        <h2>Zim News</h2>
-                        <hr>
-                        <p>
-                            In case you haven't heard, Invader Zim has made a comeback! No, not the show we remember. But it's the next best thing! Jhonen Vasquez has begun work on a comic book series so that we at least have <strong>SOME</strong> new Zim to look forward to.
-                        </p>
-                        <p>
-                            The comic series has been going for a little while now. Issue #6 should be out pretty soon!
-                        </p>
-                        <a target="_blank" class="text_link" href="http://getcomics.info/?s=invader+zim">You can get the first 5 for free right now at getcomics.info!</a>
-                        <div class="image_container">
-                            <img src="images/book_cover.jpg" alt="cover" />
+                        <div class="col-lg-6 col-md-6 col-sm-6">
+                            <a href="../show_info/history.html"><img class="info_buttons" src="../images/show_info/history.png" alt="history"/></a>
                         </div>
-                        <p>
-                            Now here's something really interesting. If you don't like reading, you should check out Soapy Waffles! They're trying to recreate the episode of Zim that we were cheated out of by Nickelodeon.
-                        </p>
-                        <a class="text_link" href="http://soapywaffles.wix.com/soapywaffles">Check out the awesome right here!</a>
+                        <div class="col-lg-6 col-md-6 col-sm-6">
+                            <a href="../show_info/episode_guide.html"><img class="info_buttons" src="../images/show_info/episode_guide.png" alt="episode guide" /></a>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6">
+                            <a href="../show_info/cast_and_crew.html"><img class="info_buttons" src="../images/show_info/cast_and_crew.png" alt="cast and crew" /></a>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6">
+                            <a href="../show_info/canceled_episodes.html"><img class="info_buttons" src="../images/show_info/canceled_episodes.png" alt="" /></a>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6">
+                            <a href="../show_info/easter_eggs.html"><img class="info_buttons" src="../images/show_info/easter_eggs.png" alt="" /></a>
+                        </div>
                     </div>
                 </div><!--End Content-->
                 <!--Side Bar-->
@@ -143,7 +125,7 @@
                                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                                 </form>
-                                <img id="minimoose" width="270" src="images/donations.png">
+                                <img id="minimoose" width="270" src="../images/donations.png">
                             </section>
                         </div>
                     </aside>
@@ -152,15 +134,15 @@
             <div class="other_areas section container"> <!--Other Links Section-->
                 <h2>Other Special Areas</h2>
                 <hr>
-                <div class="col-lg-4 col-md-4 col-sm-6">
+                <div class="col-lg-4">
                     <ul>
-                        <li><a href="other_links/lizard_boy_shrine.html">Lizard Boy Shrine</a></li>
-                        <li><a href="other_links/resisty_database.html">The Resisty Database</a></li>
+                        <li><a href="../other_links/lizard_boy_shrine.html">Lizard Boy Shrine</a></li>
+                        <li><a href="../other_links/resisty_database.html">The Resisty Database</a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
                     </ul>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-6">
+                <div class="col-lg-4">
                     <ul>
                         <li><a href="#">Screenshot Galleries</a></li>
                         <li><a href="#"></a></li>
@@ -170,7 +152,7 @@
                         <li><a href="#"></a></li>
                     </ul>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-6">
+                <div class="col-lg-4">
                     <ul>
                         <li><a href="#">Skool Seating Charts</a></li>
                         <li><a href="#"></a></li>
@@ -180,7 +162,7 @@
                         <li><a href="#"></a></li>
                     </ul>
                 </div>
-            </div>
+                </div>
         </div>
         <footer>&copy Invader Zim is property of Nickelodeon. Site created by Matt Lee and co-created by Nicolas Noriega (ThatMoose). </footer>
     </div>
