--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,7 @@
                                         <li><a href="lore/character_bios.html">Character Bios</a></li>
                                         <li><a href="lore/planet_guide.html">Planet Guide</a></li>
                                         <li><a href="lore/irken_guide.html">Irken Guide</a></li>
+                                        <li><a href="lore/spaceships.html">Ships/Vehicles</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -133,7 +134,7 @@
                 <div class="other_areas col-lg-4">
                     <ul>
                         <li><a href="other_links/lizard_boy_shrine.html">Lizard Boy Shrine</a></li>
-                        <li><a href="#">The Resisty Database</a></li>
+                        <li><a href="other_links/resisty_database.html">The Resisty Database</a></li>
                         <li><a href="#">Skool Seating Charts</a></li>
                         <li><a href="#">Screenshot Galleries</a></li>
                         <li><a href="#"></a></li>
