--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                                         <li><a href="lore/character_bios.html">Character Bios</a></li>
                                         <li><a href="lore/planet_guide.html">Planet Guide</a></li>
                                         <li><a href="lore/irken_guide.html">Irken Guide</a></li>
+                                        <li><a href="lore/spaceships.html">Ships/Vehicles</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -155,7 +156,6 @@
                 <div class="col-lg-4 col-md-4 col-sm-6">
                     <ul>
                         <li><a href="other_links/lizard_boy_shrine.html">Lizard Boy Shrine</a></li>
-                        <li><a href="other_links/resisty_database.html">The Resisty Database</a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
                     </ul>
