--- a/lore/spaceships.html
+++ b/lore/spaceships.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../images/favicon.ico">
-    <title>Social Media - The Scary Monkey Show</title>
+    <title>Ships/Vehicles - The Scary Monkey Show</title>
     <!--Stylesheets-->
     <link rel="stylesheet" href="../css/bootstrap.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="../css/style.css" media="screen" title="no title" charset="utf-8">
@@ -83,7 +83,7 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 content">
                     <div class="section">
-                        <h2>Social Media <small>Coming Soon!</small></h2>
+                        <h2>Ships/Vehicles <small>Coming Soon!</small></h2>
                         <hr>
                     </div>
                 </div><!--End Content-->
