--- a/other_links/resisty_database.html
+++ b/other_links/resisty_database.html
@@ -56,6 +56,7 @@
                                         <li><a href="../lore/character_bios.html">Character Bios</a></li>
                                         <li><a href="../lore/planet_guide.html">Planet Guide</a></li>
                                         <li><a href="../lore/irken_guide.html">Irken Guide</a></li>
+                                        <li><a href="../lore/spaceships.html">Ships/Vehicles</a></li>
                                     </ul>
                                 </div>
                             </div>
