--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
                 <div class="col-lg-4 col-md-4 col-sm-6">
                     <ul>
                         <li><a href="other_links/lizard_boy_shrine.html">Lizard Boy Shrine</a></li>
+                        <li><a href="other_links/resisty_database.html">The Resisty Database</a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
                     </ul>
