--- a/resources/social_media.html
+++ b/resources/social_media.html
@@ -83,8 +83,28 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 content">
                     <div class="section">
-                        <h2>Social Media <small>Coming Soon!</small></h2>
+                        <h2>Social Media</h2>
                         <hr>
+                        <h3>Facebook</h3>
+                        <p>
+                            <a href="https://www.facebook.com/scarymonkeyshow/"><strong>The Scary Monkey Show</strong></a> - The official facebook page of the site you're on right now!
+                        </p>
+                        <p>
+                            <a href="https://www.facebook.com/OperationHeadPigeons/"><strong>Operation Head Pigeons 2.0</strong></a> - Voice of the Invader Zim fandom. Want to hear the latest news from the Zimmie world? You came to the right page!
+                        </p>
+                        <p>
+                            <a href="https://www.facebook.com/Jhonen-Vasquez-56981331610/?fref=ts"><strong>Jhonen Vasquez's Facebook Page</strong></a> - The creator himself. See what he's got goin' on!
+                        </p>
+                        <p>
+                            <a href="https://www.facebook.com/richard.horvitz.9?fref=ts"><strong>Richard Horvitz's Facebook Page</strong></a> - The voice of ZIM!
+                        </p>
+                        <h3>Twitter</h3>
+                        <p>
+                            <a href="https://twitter.com/JhonenV"><strong>Jhonen Vasquez's Twitter</strong></a> - Jhonen's Twitter.
+                        </p>
+                        <p>
+                            <a href="https://twitter.com/RichardHorvitz"><strong>Richard Horvitz's Twitter</strong></a> - Like I said....his Twitter. Can't make it much clearer than that.
+                        </p>
                     </div>
                 </div><!--End Content-->
                 <!--Side Bar-->
