social media a little more done.

--- a/resources/social_media.html
+++ b/resources/social_media.html
@@ -87,23 +87,26 @@
                         <hr>
                         <h3>Facebook</h3>
                         <p>
-                            <a href="https://www.facebook.com/scarymonkeyshow/"><strong>The Scary Monkey Show</strong></a> - The official facebook page of the site you're on right now!
+                            <a target="_blank" href="https://www.facebook.com/scarymonkeyshow/"><strong>The Scary Monkey Show</strong></a> - The official facebook page of the site you're on right now!
                         </p>
                         <p>
-                            <a href="https://www.facebook.com/OperationHeadPigeons/"><strong>Operation Head Pigeons 2.0</strong></a> - Voice of the Invader Zim fandom. Want to hear the latest news from the Zimmie world? You came to the right page!
+                            <a target="_blank" href="https://www.facebook.com/OperationHeadPigeons/"><strong>Operation Head Pigeons 2.0</strong></a> - Voice of the Invader Zim fandom. Want to hear the latest news from the Zimmie world? You came to the right page!
                         </p>
                         <p>
-                            <a href="https://www.facebook.com/Jhonen-Vasquez-56981331610/?fref=ts"><strong>Jhonen Vasquez's Facebook Page</strong></a> - The creator himself. See what he's got goin' on!
+                            <a target="_blank" href="https://www.facebook.com/soapywaffles/?fref=ts"><strong>Soapy Waffles</strong></a> - They're making new Zim episodes! As if that's not exciting enough, they post really awesome information on their Facebook as well!
                         </p>
                         <p>
-                            <a href="https://www.facebook.com/richard.horvitz.9?fref=ts"><strong>Richard Horvitz's Facebook Page</strong></a> - The voice of ZIM!
+                            <a target="_blank" href="https://www.facebook.com/Jhonen-Vasquez-56981331610/?fref=ts"><strong>Jhonen Vasquez's Facebook Page</strong></a> - The creator himself. See what he's got goin' on!
+                        </p>
+                        <p>
+                            <a target="_blank" href="https://www.facebook.com/richard.horvitz.9?fref=ts"><strong>Richard Horvitz's Facebook Page</strong></a> - The voice of ZIM!
                         </p>
                         <h3>Twitter</h3>
                         <p>
-                            <a href="https://twitter.com/JhonenV"><strong>Jhonen Vasquez's Twitter</strong></a> - Jhonen's Twitter.
+                            <a target="_blank" href="https://twitter.com/JhonenV"><strong>Jhonen Vasquez's Twitter</strong></a> - Jhonen's Twitter.
                         </p>
                         <p>
-                            <a href="https://twitter.com/RichardHorvitz"><strong>Richard Horvitz's Twitter</strong></a> - Like I said....his Twitter. Can't make it much clearer than that.
+                            <a target="_blank" href="https://twitter.com/RichardHorvitz"><strong>Richard Horvitz's Twitter</strong></a> - Like I said....his Twitter. Can't make it much clearer than that.
                         </p>
                     </div>
                 </div><!--End Content-->
