Ship page started Editing done to resisty database page

--- a/other_links/resisty_database.html
+++ b/other_links/resisty_database.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="images/favicon.ico">
-    <title>The Scary Monkey Show Invader Zim Information Site</title>
+    <title>The Resisty Database - The Scary Monkey Show</title>
     <!--Stylesheets-->
     <link rel="stylesheet" href="../css/bootstrap.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="../css/resisty.css" media="screen" title="no title" charset="utf-8">
@@ -83,22 +83,25 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 content">
                     <div class="section">
-                        <h2>Show Info</h2>
+                        <h2>All Things Resisty!</h2>
                         <hr>
+                        <p>
+                            We are the resisty! A group of members from all reaches of the universe with a common enemy. The Irken Empire!
+                        </p>
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <a href="../show_info/history.html"><img class="info_buttons" src="../images/show_info/history.png" alt="history"/></a>
+                            <a href="../other_links/resisty-database/history.html"><img class="info_buttons" src="../images/res/history.png" alt="history"/></a>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <a href="../show_info/episode_guide.html"><img class="info_buttons" src="../images/show_info/episode_guide.png" alt="episode guide" /></a>
+                            <a href="../other_links/resisty_database/ship.html"><img class="info_buttons" src="../images/resisty_database/ship.png" alt="ship" /></a>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <a href="../show_info/cast_and_crew.html"><img class="info_buttons" src="../images/show_info/cast_and_crew.png" alt="cast and crew" /></a>
+                            <a href="../show_info/cast_and_crew.html"><img class="info_buttons" src="../images/show_info/cast_and_crew.png" alt="members" /></a>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <a href="../show_info/canceled_episodes.html"><img class="info_buttons" src="../images/show_info/canceled_episodes.png" alt="" /></a>
+                            <a href="../../show_info/canceled_episodes.html"><img class="info_buttons" src="../images/show_info/canceled_episodes.png" alt="something else" /></a>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6">
-                            <a href="../show_info/easter_eggs.html"><img class="info_buttons" src="../images/show_info/easter_eggs.png" alt="" /></a>
+                            <a href="../../show_info/easter_eggs.html"><img class="info_buttons" src="../images/show_info/easter_eggs.png" alt="" /></a>
                         </div>
                     </div>
                 </div><!--End Content-->
