--- a/resources/other_fan_sites.html
+++ b/resources/other_fan_sites.html
@@ -160,8 +160,8 @@
                         <hr>
                         <div class="col-lg-4">
                             <ul>
-                                <li><a href="other_links/lizard_boy_shrine.html">Lizard Boy Shrine</a></li>
-                                <li><a href="other_links/resisty_database.html">The Resisty Database</a></li>
+                                <li><a href="../other_links/lizard_boy_shrine.html">Lizard Boy Shrine</a></li>
+                                <li><a href="../other_links/resisty_database.html">The Resisty Database</a></li>
                                 <li><a href="#"></a></li>
                                 <li><a href="#"></a></li>
                             </ul>
