--- a/resources/social_media.html
+++ b/resources/social_media.html
@@ -103,6 +103,9 @@
                         </p>
                         <h3>Twitter</h3>
                         <p>
+                            <a target="_blank" href="https://twitter.com/Soapy_Waffles"><strong>Soapy Waffles' Twitter</strong></a> - The Twitter of the Soapy Waffles group.
+                        </p>
+                        <p>
                             <a target="_blank" href="https://twitter.com/JhonenV"><strong>Jhonen Vasquez's Twitter</strong></a> - Jhonen's Twitter.
                         </p>
                         <p>
@@ -145,8 +148,8 @@
                 <hr>
                 <div class="col-lg-4">
                     <ul>
-                        <li><a href="other_links/lizard_boy_shrine.html">Lizard Boy Shrine</a></li>
-                        <li><a href="other_links/resisty_database.html">The Resisty Database</a></li>
+                        <li><a href="../other_links/lizard_boy_shrine.html">Lizard Boy Shrine</a></li>
+                        <li><a href="../other_links/resisty_database.html">The Resisty Database</a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
                     </ul>
