--- a/other_links/resisty_database/ship.html
+++ b/other_links/resisty_database/ship.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
+
 <html>
 <head>
     <!--Meta Tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="../images/favicon.ico">
-    <title>Other Resources - The Scary Monkey Show</title>
+    <link rel="icon" href="../../images/favicon.ico">
+    <title>The Resisty Database - The Scary Monkey Show</title>
     <!--Stylesheets-->
-    <link rel="stylesheet" href="../css/bootstrap.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="../css/style.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="../../css/bootstrap.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="../../css/resisty.css" media="screen" title="no title" charset="utf-8">
     <!--Javascript-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src='../js/script.js'></script>
-    <script type="text/javascript" src='../js/bootstrap.js'></script>
+    <script type="text/javascript" src='../../js/script.js'></script>
+    <script type="text/javascript" src='../../js/bootstrap.js'></script>
     <!--Fonts-->
     <link href='http://fonts.googleapis.com/css?family=Voltaire' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
@@ -20,7 +21,7 @@
 </head>
 <body>
     <div class="container wrapper">
-        <img class="site_banner" src="../images/index/site_banner.png">
+        <img class="site_banner" src="../../images/resisty_database/resisty_banner.png">
         <nav class='navbar navbar-inverse'>
             <div class='container'>
                 <div class='navbar-header'>
@@ -33,48 +34,48 @@
                 </div><!--End Navbar Header-->
                 <div class=' collapse navbar-collapse' id='navbar-collapse'>
                     <ul class='nav navbar-nav'>
-                        <li><a href="../index.html">Home</a></li>
-                        <li><a href="../show_info.html">Show Info</a>
+                        <li><a href="../../index.html">Home</a></li>
+                        <li><a href="../../show_info.html">Show Info</a>
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
-                                        <li><a href="../show_info/history.html">History</a></li>
-                                        <li><a href="../show_info/episode_guide.html">Episode Guide</a></li>
-                                        <li><a href="../show_info/cast_and_crew.html">Cast and Crew</a></li>
-                                        <li><a href="../show_info/canceled_episodes.html">Canceled Episodes</a></li>
-                                        <li><a href="../show_info/easter_eggs.html">Easter Eggs/Cameos</a></li>
+                                        <li><a href="../../show_info/history.html">History</a></li>
+                                        <li><a href="../../show_info/episode_guide.html">Episode Guide</a></li>
+                                        <li><a href="../../show_info/cast_and_crew.html">Cast and Crew</a></li>
+                                        <li><a href="../../show_info/canceled_episodes.html">Canceled Episodes</a></li>
+                                        <li><a href="../../show_info/easter_eggs.html">Easter Eggs/Cameos</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </li>
-                        <li><a href="../lore.html">Lore</a>
+                        <li><a href="../../lore.html">Lore</a>
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
-                                        <li><a href="../lore/creature_biology.html">Creature Biology</a></li>
-                                        <li><a href="../lore/earth_locations.html">Earth Locations</a></li>
-                                        <li><a href="../lore/character_bios.html">Character Bios</a></li>
-                                        <li><a href="../lore/planet_guide.html">Planet Guide</a></li>
-                                        <li><a href="../lore/irken_guide.html">Irken Guide</a></li>
-                                        <li><a href="../lore/spaceships.html">Ships/Vehicles</a></li>
+                                        <li><a href="../../lore/creature_biology.html">Creature Biology</a></li>
+                                        <li><a href="../../lore/earth_locations.html">Earth Locations</a></li>
+                                        <li><a href="../../lore/character_bios.html">Character Bios</a></li>
+                                        <li><a href="../../lore/planet_guide.html">Planet Guide</a></li>
+                                        <li><a href="../../lore/irken_guide.html">Irken Guide</a></li>
+                                        <li><a href="../../lore/spaceships.html">Ships/Vehicles</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </li>
-                        <li><a href="../resources.html">Zim Resources</a>
+                        <li><a href="../../resources.html">Zim Resources</a>
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
-                                        <li><a href="../resources/other_fan_sites.html">Other Fan Sites</a></li>
-                                        <li><a href="../resources/forums.html">Forums</a></li>
-                                        <li><a href="../resources/social_media.html">Social Media</a></li>
-                                        <li><a href="../resources/other_resources.html">Other</a></li>
+                                        <li><a href="../../resources/other_fan_sites.html">Other Fan Sites</a></li>
+                                        <li><a href="../../resources/forums.html">Forums</a></li>
+                                        <li><a href="../../resources/social_media.html">Social Media</a></li>
+                                        <li><a href="../../resources/other_resources.html">Other</a></li>
                                     </ul>
                                 </div>
                             </div>
                         </li>
-                        <li><a href="../faq.html">FAQ</a></li>
-                        <li><a href="../contact.html">Contact</a></li>
+                        <li><a href="../../faq.html">FAQ</a></li>
+                        <li><a href="../../contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div><!--End Container-->
@@ -83,8 +84,18 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 content">
                     <div class="section">
-                        <h2>Other Resources <small>Coming Soon!</small></h2>
+                        <h2>Resisty Vortian Ship</h2>
                         <hr>
+                        <img class="float_right" src="../../images/resisty_database/ship/ship1.jpg" alt="ship1" />
+                        <p>
+                            The Resisty use an old Vortian ship to make their first confrontation with the Irken Empire by taking on The Massive. They would have been blown up immediately if not for Zim intervening.
+                        </p>
+                        <h3>Weapons</h3>
+                        <p>
+                            The Resisty's ship is armed with 4 lasers on the tips of its wings as well as a floating energy canon on the back of the ship. None of the weapons posess the energy to pierce the defenses of The Massive. Only the canon is strong enough to etch the words: Resisty Rocks" on the hull of the ship.
+                        </p>
+                        <h3>Security</h3>
+
                     </div>
                 </div><!--End Content-->
                 <!--Side Bar-->
@@ -111,7 +122,7 @@
                                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                                 </form>
-                                <img id="minimoose" width="270" src="../images/donations.png">
+                                <img id="minimoose" width="270" src="../../images/donations.png">
                             </section>
                         </div>
                     </aside>
@@ -122,8 +133,8 @@
                 <hr>
                 <div class="col-lg-4">
                     <ul>
-                        <li><a href="../other_links/lizard_boy_shrine.html">Lizard Boy Shrine</a></li>
-                        <li><a href="../other_links/resisty_database.html">The Resisty Database</a></li>
+                        <li><a href="../../other_links/lizard_boy_shrine.html">Lizard Boy Shrine</a></li>
+                        <li><a href="../../other_links/resisty_database.html">The Resisty Database</a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
                     </ul>
