Ship page almost complete

--- a/other_links/resisty_database/ship.html
+++ b/other_links/resisty_database/ship.html
@@ -94,8 +94,18 @@
                         <p>
                             The Resisty's ship is armed with 4 lasers on the tips of its wings as well as a floating energy canon on the back of the ship. None of the weapons posess the energy to pierce the defenses of The Massive. Only the canon is strong enough to etch the words: Resisty Rocks" on the hull of the ship.
                         </p>
-                        <h3>Security</h3>
-
+                        <div style="overflow:auto;">
+                        <img class="float_left" src="../../images/resisty_database/ship/resistyrocks1.jpg" alt="resisity rocks" />
+                        <img class="float_right" src="../../images/resisty_database/ship/resistyrocks2.jpg" alt="resisity rocks" />
+                        </div>
+                        <h3 style="clear: both;">Security</h3>
+                        <img class="float_left" src="../../images/resisty_database/ship/pod1.jpg" alt="pods" />
+                        <p>
+                            When the crew of the Resisty ship knew they were in danger of crashing to Earth because of the faulty power core, they abandoned ship using the escape pods.
+                        </p>
+                        <p>
+                            To avoid anyone getting their hands on the technology aboard, they activated the shrinky self destruct before they abandoned ship. Shrinky self destruct causes the ship to shrink until it reaches near microscopic size and then explode.
+                        </p>
                     </div>
                 </div><!--End Content-->
                 <!--Side Bar-->
