Changed "Creature Biology" to Alien Guide"

--- a/lore/alien_guide.html
+++ b/lore/alien_guide.html
@@ -51,7 +51,7 @@
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
-                                        <li><a href="../lore/creature_biology.html">Creature Biology</a></li>
+                                        <li><a href="../lore/alien_guide.html">Alien Guide</a></li>
                                         <li><a href="../lore/earth_locations.html">Earth Locations</a></li>
                                         <li><a href="../lore/character_bios.html">Character Bios</a></li>
                                         <li><a href="../lore/planet_guide.html">Planet Guide</a></li>
@@ -83,7 +83,7 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 content">
                     <div class="section">
-                        <h2>Creature Biology <small>Coming Soon!</small></h2>
+                        <h2>Alien Guide <small>Coming Soon!</small></h2>
                         <hr>
                     </div>
                 </div><!--End Content-->
