--- a/other_links/resisty_database/ship.html
+++ b/other_links/resisty_database/ship.html
@@ -52,7 +52,7 @@
                             <div class="nav-content">
                                 <div class="nav-sub">
                                     <ul>
-                                        <li><a href="../../lore/creature_biology.html">Creature Biology</a></li>
+                                        <li><a href="../../lore/alien_guide.html">Alien Guide</a></li>
                                         <li><a href="../../lore/earth_locations.html">Earth Locations</a></li>
                                         <li><a href="../../lore/character_bios.html">Character Bios</a></li>
                                         <li><a href="../../lore/planet_guide.html">Planet Guide</a></li>
