--- a/faq.html
+++ b/faq.html
@@ -84,6 +84,17 @@
                 <div class="col-lg-8 col-md-8 content">
                     <div class="section">
                         <h2>FAQ</h2>
+                        <hr>
+                        <h3>Is this site done yet?</h3>
+                        <p>
+                            No. Next question.
+                        </p>
+                        <br>
+                        <br>
+                        <br>
+                        <p>
+                            I don't get asked many questions.
+                        </p>
                     </div>
                 </div><!--End Content-->
                 <!--Side Bar-->
