--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
                         <h2>Updates</h2>
                         <hr>
                         <p>
+                            <strong>January 3, 2016 - </strong> Happy New Year people! I am happy to announce new parts of the site are open for business. Right now the Resisty Detabase is getting built and some sections of it are already complete. The FAQ part of the site is done. But if you keep asking questions, well, it will be longer.
+                        </p>
+                        <p>
+                            We have gotten a donation! We got a donation for a dollar today (which comes to 67 cents when you factor in Paypal fees. But that's still great!). I won't say who it's from because he didn't say if he wanted me to or not.
+                        </p>
+                        <p>
+                            Since I'm talking about donation, I guess it's time I talked about the domain. I'm still talking it over with our Soapy Waffles associate but I'm not really sure if "thescarymonkeyshow.com" will be available as a domain. We may have to settle for "scarymonkeyshow.com" without "the". I hope that's not a problem for anyone. Anyway, things are coming together regardless. And that's great! Keep the help coming! Thanks so much!
+                        </p>
+                        <p>
                             <strong>December 31, 2015 - </strong>Canceled Episodes page complete! Go there and check out transcripts for unfinished episodes! Some episodes even have downloadable audio tracks of the voice acting of those episodes.
                         </p>
                         <p>
@@ -93,12 +102,6 @@
                         </p>
                         <p>
                             <strong>December 30, 2015 - </strong>The search for people to help with the site is going well. Adding content is going to take some time so what I'm going to do first is add pages for the other sites. Look on Zim Resources soon for good stuff!
-                        </p>
-                        <p>
-                            <strong>December 28, 2015 - </strong>The site has been revamped. It may look prettymuch the same but I can assure you the structure is way different. I've revamped it in a much more managable coding format. So I should have it back up to where it was in no time. Then maybe I can get around to finishing it. Also my buddy, Nicolas is going to be helping out in any way he can.
-                        </p>
-                        <p>
-                            I am going to make the contact page first so that I or Nicolas can be contacted about content to add. I have all the original files from The Scary Monkey Show from 2007 but if you think you have something new to add, please let me know! In fact, here's my email: <a href="mailto:mattboy115@yahoo.com">mattboy115@yahoo.com</a>!
                         </p>
                     </div>
                     <div class="section">
