--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <h2>Updates</h2>
                         <hr>
                         <p>
-                            <strong>January 3, 2016 - </strong> Happy New Year people! I am happy to announce new parts of the site are open for business. Right now the Resisty Detabase is getting built and some sections of it are already complete. The FAQ part of the site is done. But if you keep asking questions, well, it will be longer.
+                            <strong>January 3, 2016 - </strong> Happy New Year people! I am happy to announce new parts of the site are open for business. Right now the <a href="other_links/resisty_database.html">Resisty Detabase</a> is getting built and some sections of it are already complete. The <a href="faq.html">FAQ</a> part of the site is done. But if you keep asking questions, well, it will be longer. Also you may want to check out <a href="show_info/canceled_episodes.html">Canceled Episodes</a>. Be on the look out for the <a href="lore/alien_guide.html">Alien Guide</a> soon to come!
                         </p>
                         <p>
                             We have gotten a donation! We got a donation for a dollar today (which comes to 67 cents when you factor in Paypal fees. But that's still great!). I won't say who it's from because he didn't say if he wanted me to or not.
